crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__metadata__tests__world_empty.snap
---
source: crates/wit-compiler/src/queries/metadata.rs
info:
  src: "world empty {}"
  ast: "(source_file (top_level_item (world_item name: (identifier))))"
---
[
    Node {
        name: "empty",
        type_name: "wit_compiler::queries::metadata::WorldMetadata",
        file: "world_empty.wit",
        range: 0..14,
        children: [],
    },
]
